K8s/ingress/helloworld-v3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-v3-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-v3
    spec:
      containers:
      - name: k8s-demo
        image: amitvashist7/k8s-tiny-web:4
        ports:
        - name: nodejs-port
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v3
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30310
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: helloworld-v3
